--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!--Rubik-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <!--Roboto-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -44,15 +50,25 @@
       <div class="list">
         <p class="list-title">Needs to be done</p>
 
-        <div class="card">
-          <span>Task 1</span>
-          <span>Task 2</span>
-          <span>Task 3</span>
-          <span>Task 4</span>
-          <span>Task 5</span>
+        <div class="cards-container">
+          <div class="card">
+            <span class="card-text">Task №1</span>
+          </div>
+          <div class="card">
+            <span class="card-text">Task 2</span>
+          </div>
+          <div class="card">
+            <span class="card-text">Task 3</span>
+          </div>
+          <div class="card">
+            <span class="card-text">Task 4</span>
+          </div>
+          <div class="card">
+            <span class="card-text">Task 5</span>
+          </div>
         </div>
 
-        <button><span>+</span> Add new card</button>
+        <p class="add-new-card">+ Add new card</p>
       </div>
     </main>
   </body>
