changes to lighthouse

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Taskboard project for my portfolio"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>TaskUp</title>
     <link rel="icon" href="assets/logo.svg" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
