--- a/app/index.html
+++ b/app/index.html
@@ -8,21 +8,21 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>TaskUp</title>
-    <link rel="icon" href="assets/logo.svg" />
+    <link rel="icon" href="/assets/logo.svg" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
-    <!--Fonts-->
+    <!--===Fonts===-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!--Rubik-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700"
       rel="stylesheet"
     />
     <!--Roboto-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -30,24 +30,46 @@
     <!--Header-->
     <header class="taskboard-header">
       <div class="logo-container">
-        <img src="assets/logo.svg" alt="TaskUpLogo" class="logo" />
+        <img src="/assets/logo.svg" alt="TaskUpLogo" class="logo" />
         <span class="logo-text">TaskUp</span>
       </div>
       <div class="info-bg-container">
-        <img src="assets/info-icon.svg" alt="Info" class="info-icon" />
-        <img src="assets/bg-icon.svg" alt="ChangeBackground" class="bg-icon" />
+        <img src="/assets/info-icon.svg" alt="Info" class="info-icon" />
+        <img src="/assets/bg-icon.svg" alt="ChangeBackground" class="bg-icon" />
       </div>
     </header>
 
     <!--Main-->
     <main class="taskboard-main">
-      <div class="create-list-container">
-        <input
-          type="text"
-          class="create-list-input"
-          placeholder="Enter list title"
-        />
-        <button class="create-list-btn">Add list</button>
+      <div class="list">
+        <p class="list-title">Needs to be done</p>
+
+        <div class="cards-container">
+          <div class="card" id="draggable">
+            <span class="card-text">Task №1</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 2</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 3</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 4</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 5</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+        </div>
+
+        <p class="add-new-card">
+          <span class="add-new-card-plus">+</span> Add new card
+        </p>
       </div>
 
       <div class="list">
@@ -56,30 +78,79 @@
         <div class="cards-container">
           <div class="card">
             <span class="card-text">Task №1</span>
-            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 2</span>
-            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 3</span>
-            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 4</span>
-            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 5</span>
-            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
         </div>
 
-        <p class="add-new-card">+ Add new card</p>
+        <p class="add-new-card">
+          <span class="add-new-card-plus">+</span> Add new card
+        </p>
       </div>
+
+      <div class="list">
+        <p class="list-title">Needs to be done</p>
+
+        <div class="cards-container">
+          <div class="card">
+            <span class="card-text">Task №1</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 2</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 3</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 4</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+          <div class="card">
+            <span class="card-text">Task 5</span>
+            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+          </div>
+        </div>
+
+        <p class="add-new-card">
+          <span class="add-new-card-plus">+</span> Add new card
+        </p>
+      </div>
+
+      <div class="create-list-container">
+        <input
+          type="text"
+          class="create-list-input"
+          placeholder="Enter list title"
+        />
+        <div class="create-list-controls">
+          <button class="create-list-btn">Add list</button>
+          <img src="/assets/close.svg" alt="Close" class="create-list-close" />
+        </div>
+      </div>
+
+      <button class="create-new-list-btn">
+        <span class="create-new-list-plus">+</span> Add new list
+      </button>
     </main>
   </body>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script src="script.js"></script>
 </html>
