--- a/app/index.html
+++ b/app/index.html
@@ -45,23 +45,23 @@
         <p class="list-title">Needs to be done</p>
 
         <div class="cards-container">
-          <div class="card" id="draggable">
+          <div class="card draggable">
             <span class="card-text">Task №1</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 2</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 3</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 4</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 5</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
@@ -76,23 +76,23 @@
         <p class="list-title">Needs to be done</p>
 
         <div class="cards-container">
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task №1</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 2</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 3</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 4</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card">
+          <div class="card draggable">
             <span class="card-text">Task 5</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
@@ -152,5 +152,14 @@
     </main>
   </body>
 
-  <script src="script.js"></script>
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"
+    type="text/javascript"
+  ></script>
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"
+    type="text/javascript"
+  ></script>
+
+  <script type="text/javascript" src="script.js"></script>
 </html>
