--- a/app/index.html
+++ b/app/index.html
@@ -30,12 +30,27 @@
     <!--Header-->
     <header class="taskboard-header">
       <div class="logo-container">
-        <img src="/assets/logo.svg" alt="TaskUpLogo" class="logo" />
+        <img
+          src="/assets/logo.svg"
+          alt="TaskUpLogo"
+          class="logo"
+          draggable="false"
+        />
         <span class="logo-text">TaskUp</span>
       </div>
       <div class="info-bg-container">
-        <img src="/assets/info-icon.svg" alt="Info" class="info-icon" />
-        <img src="/assets/bg-icon.svg" alt="ChangeBackground" class="bg-icon" />
+        <img
+          src="/assets/info-icon.svg"
+          alt="Info"
+          class="info-icon"
+          draggable="false"
+        />
+        <img
+          src="/assets/bg-icon.svg"
+          alt="ChangeBackground"
+          class="bg-icon"
+          draggable="false"
+        />
       </div>
     </header>
 
@@ -45,23 +60,23 @@
         <p class="list-title">Needs to be done</p>
 
         <div class="cards-container">
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task №1</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 2</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 3</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 4</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 5</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
@@ -76,23 +91,23 @@
         <p class="list-title">Needs to be done</p>
 
         <div class="cards-container">
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task №1</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 2</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 3</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 4</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
-          <div class="card draggable">
+          <div class="card">
             <span class="card-text">Task 5</span>
             <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
