moved the index file to root

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <title>TaskUp</title>
     <link rel="icon" href="/assets/logo.svg" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="app/styles.css" />
 
     <!--===Fonts===-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -176,5 +176,5 @@
     type="text/javascript"
   ></script>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="app/script.js"></script>
 </html>
