corrected the src for images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>TaskUp</title>
-    <link rel="icon" href="/assets/logo.svg" />
+    <link rel="icon" href="assets/logo.svg" />
     <link rel="stylesheet" type="text/css" href="app/styles.css" />
 
     <!--===Fonts===-->
@@ -31,7 +31,7 @@
     <header class="taskboard-header">
       <div class="logo-container">
         <img
-          src="/assets/logo.svg"
+          src="assets/logo.svg"
           alt="TaskUpLogo"
           class="logo"
           draggable="false"
@@ -40,13 +40,13 @@
       </div>
       <div class="info-bg-container">
         <img
-          src="/assets/info-icon.svg"
+          src="assets/info-icon.svg"
           alt="Info"
           class="info-icon"
           draggable="false"
         />
         <img
-          src="/assets/bg-icon.svg"
+          src="assets/bg-icon.svg"
           alt="ChangeBackground"
           class="bg-icon"
           draggable="false"
@@ -62,23 +62,23 @@
         <div class="cards-container">
           <div class="card">
             <span class="card-text">Task №1</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 2</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 3</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 4</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 5</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
         </div>
 
@@ -93,23 +93,23 @@
         <div class="cards-container">
           <div class="card">
             <span class="card-text">Task №1</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 2</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 3</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 4</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 5</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
         </div>
 
@@ -124,23 +124,23 @@
         <div class="cards-container">
           <div class="card">
             <span class="card-text">Task №1</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 2</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 3</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 4</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
           <div class="card">
             <span class="card-text">Task 5</span>
-            <img src="/assets/edit-pencil.svg" class="card-edit" alt="Edit" />
+            <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
           </div>
         </div>
 
@@ -157,7 +157,7 @@
         />
         <div class="create-list-controls">
           <button class="create-list-btn">Add list</button>
-          <img src="/assets/close.svg" alt="Close" class="create-list-close" />
+          <img src="assets/close.svg" alt="Close" class="create-list-close" />
         </div>
       </div>
 
