--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <!--Rubik-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@500;600;700"
       rel="stylesheet"
     />
     <!--Roboto-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400"
       rel="stylesheet"
     />
   </head>
@@ -168,11 +168,11 @@
   </body>
 
   <script
-    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     type="text/javascript"
   ></script>
   <script
-    src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"
+    src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"
     type="text/javascript"
   ></script>
 
