implemented creating cards

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="list">
         <p class="list-title">Needs to be done</p>
 
-        <div class="cards-container">
+        <div class="cards-container" id="card-container1">
           <div class="card">
             <span class="card-text">Task №1</span>
             <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
@@ -82,7 +82,28 @@
           </div>
         </div>
 
-        <p class="add-new-card">
+        <div class="create-card-container" id="create-card-container1">
+          <textarea
+            type="text"
+            id="create-card-input1"
+            class="create-card-input"
+            maxlength="100"
+            placeholder="Enter card title"
+          ></textarea>
+          <div class="create-card-controls">
+            <button class="create-card-btn" id="create-card-btn1">
+              Add card
+            </button>
+            <img
+              src="assets/close.svg"
+              alt="Close"
+              draggable="false"
+              class="create-card-close"
+            />
+          </div>
+        </div>
+
+        <p class="add-new-card" id="add-new-card1">
           <span class="add-new-card-plus">+</span> Add new card
         </p>
       </div>
@@ -90,7 +111,7 @@
       <div class="list">
         <p class="list-title">Needs to be done</p>
 
-        <div class="cards-container">
+        <div class="cards-container" id="card-container2">
           <div class="card">
             <span class="card-text">Task №1</span>
             <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
@@ -113,7 +134,28 @@
           </div>
         </div>
 
-        <p class="add-new-card">
+        <div class="create-card-container" id="create-card-container2">
+          <textarea
+            type="text"
+            id="create-card-input2"
+            class="create-card-input"
+            maxlength="100"
+            placeholder="Enter card title"
+          ></textarea>
+          <div class="create-card-controls">
+            <button class="create-card-btn" id="create-card-btn2">
+              Add card
+            </button>
+            <img
+              src="assets/close.svg"
+              alt="Close"
+              draggable="false"
+              class="create-card-close"
+            />
+          </div>
+        </div>
+
+        <p class="add-new-card" id="add-new-card2">
           <span class="add-new-card-plus">+</span> Add new card
         </p>
       </div>
@@ -121,7 +163,7 @@
       <div class="list">
         <p class="list-title">Needs to be done</p>
 
-        <div class="cards-container">
+        <div class="cards-container" id="card-container3">
           <div class="card">
             <span class="card-text">Task №1</span>
             <img src="assets/edit-pencil.svg" class="card-edit" alt="Edit" />
@@ -144,12 +186,33 @@
           </div>
         </div>
 
-        <p class="add-new-card">
+        <div class="create-card-container" id="create-card-container3">
+          <textarea
+            type="text"
+            id="create-card-input3"
+            class="create-card-input"
+            maxlength="100"
+            placeholder="Enter card title"
+          ></textarea>
+          <div class="create-card-controls">
+            <button class="create-card-btn" id="create-card-btn3">
+              Add card
+            </button>
+            <img
+              src="assets/close.svg"
+              alt="Close"
+              draggable="false"
+              class="create-card-close"
+            />
+          </div>
+        </div>
+
+        <p class="add-new-card" id="add-new-card3">
           <span class="add-new-card-plus">+</span> Add new card
         </p>
       </div>
 
-      <div class="create-list-container">
+      <!-- <div class="create-list-container">
         <input
           type="text"
           class="create-list-input"
@@ -159,7 +222,7 @@
           <button class="create-list-btn">Add list</button>
           <img src="assets/close.svg" alt="Close" class="create-list-close" />
         </div>
-      </div>
+      </div> -->
 
       <button class="create-new-list-btn">
         <span class="create-new-list-plus">+</span> Add new list
