added animation for creating a new list and some other small fixes

--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
         />
         <span class="logo-text">TaskUp</span>
       </div>
-      <div class="info-bg-container">
-        <img
-          src="assets/info-icon.svg"
-          alt="Info"
-          class="info-icon"
-          draggable="false"
-        />
+      <div class="bg-container">
         <img
           src="assets/bg-icon.svg"
           alt="ChangeBackground"
@@ -212,7 +206,7 @@
         </p>
       </div>
 
-      <!-- <div class="create-list-container">
+      <div class="create-list-container">
         <input
           type="text"
           class="create-list-input"
@@ -222,7 +216,7 @@
           <button class="create-list-btn">Add list</button>
           <img src="assets/close.svg" alt="Close" class="create-list-close" />
         </div>
-      </div> -->
+      </div>
 
       <button class="create-new-list-btn">
         <span class="create-new-list-plus">+</span> Add new list
