implemented adding lists and small fixes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
     <!--Main-->
     <main class="taskboard-main">
       <div class="list">
-        <p class="list-title">Needs to be done</p>
+        <div class="list-head">
+          <p class="list-title">Needs to be done</p>
+          <img src="assets/delete.svg" alt="delete" class="delete-list" />
+        </div>
 
         <div class="cards-container" id="card-container1">
           <div class="card">
@@ -103,7 +106,7 @@
       </div>
 
       <div class="list">
-        <p class="list-title">Needs to be done</p>
+        <p class="list-title">In Progress</p>
 
         <div class="cards-container" id="card-container2">
           <div class="card">
@@ -155,7 +158,7 @@
       </div>
 
       <div class="list">
-        <p class="list-title">Needs to be done</p>
+        <p class="list-title">Done</p>
 
         <div class="cards-container" id="card-container3">
           <div class="card">
