implemented user background

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <span class="logo-text">TaskUp</span>
       </div>
       <div class="bg-container">
-        <label for="avatar" class="bg-icon"></label>
-        <input id="avatar" type="file" style="display: none" />
+        <label for="avatar-input" class="bg-icon"></label>
+        <input id="avatar-input" type="file" style="display: none" />
       </div>
     </header>
 
