--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       <div class="lists-container">
         <div class="list" id="list1">
           <div class="list-head">
-            <p class="list-title" contenteditable="true">Needs to be done</p>
+            <p class="list-title" contenteditable="true" id="title1">
+              Needs to be done
+            </p>
             <img
               src="assets/delete.svg"
               alt="delete"
